# largonji

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_EN.md  main.py  pyproject.toml  tests.py
largonji/: __init__.py  config.py  converter.py  lexicon.py  preservation.py  suffixes.py
